Add role-aware dashboard updates and booking management improvements